# dutch_embedding_llm

./: .gitignore  .lintr  .radian_profile  file.json  hello.py  pyproject.toml  pyproject_poetry.toml
archive/: 03a_html_feasability.py  04_extract_feasability_md.py  04_fuzzy_info.py  04_process_translations.py  05_clean_sentences.py  05_prompt_agreements.py  06_prompt_land_allocation.py  06_rag.py  07_translate.py  08_prompt.py  08a_ollama_prompt.py  10_process_llm_answers.py  20_prepare_land_ownership.py  D02_econ_feas_validation.py  NLP_of_plans.py  P03_LLM_DCP.py  P04_land_exploitation.py  P05_dev_owner.py  P07_Land_development.py  S00_create_plan_db.py  S00_download_plans.py  S02_extract_plan_areas.py  S04_retrieve.py  problematic_pdfs.py  process_PDFs_to_text.py  rag.py  translation.py
data/: LANDUSE_FEASIBILITY_INDICATORS.parquet  OUTPUT.parquet  Problem_PLD.parquet  no_file.parquet  plans_to_extract_cv.parquet
forms/: HTML_manual.json  HTML_manual.py  HTML_manual_Anterior Agreement.json  HTML_manual_Exploitation Plan.json  HTML_query_translations.json
scripts/: 00_download_files.py  00_setup_db.py  01_sample_plans.py  02_process_pdfs.py  03_process_html.py  04D_manual_feas_sec_extraction.py  05_extract_sentences.py  06_translate.py  07_Extraction_dashboard.py  08_process_answers.py  CUDAtest.py  D01_heading_selection_interface.py  D02_econ_feas_validation.py  DB00_setup_db.py  DB01_add_existing_feas_section.py  P00_translate.py  P02_Extraction_dashboard.py  P06_dev_responsible_costs.py  P08_conservative.py  P09_municipality_initiator.py  S01_process_answers.py  Tools.py  config.py  econ_feas_validation.py  evaluate_cost_recovery.py  extract_feasibility_section.py  extract_headings.py  manual.py  process_answers.py  prompt_DCP.py  prompt_agreement.py  sandbox.py  translate.py
src/: 00_download_files.py  01_sample_plans.py  02_process_pdfs.py  04_extract_sentences.py  05_prompt_agreements.py  06_prompt_land_allocation.py  07_prompt_plan_info.py  08_process_answers.py  09_process_answers.py  09_sampling.py  10_embedding_scores.py  10_process_llm_answers.py  config.py  (+13 more)
(+6675 files in other folders)
