[project]
name = "dutch-embedding-llm"
version = "0.1.0"
description = "RAG pipeline to extract information from the land use plan documents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "streamlit>=1.41.1",
]

[tool.poetry]
name = "dutch-llm"
version = "0.1.0"
description = ""
authors = ["Babak Firoozi Fooladi <babak.firoozifooladi@aalto.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
rapidfuzz = "^3.12.1"
jupyterlab = "^4.3.5"
pymupdf = "^1.25.2"
transformers = "^4.48.2"
torch = "2.6.0+cu126"
einops = "^0.8.0"
sentence-transformers = "^3.4.1"
spacy = {extras = ["cuda12x"], version = "^3.8.4"}
pandas = "^2.2.3"
tqdm = "^4.67.1"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
dspy = "^2.6.2"
ollama = "^0.4.7"
streamlit = "^1.42.0"
scipy = "^1.15.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
statsmodels = "^0.14.4"
markdownify = "^0.13"
xmltodict = "^0.14.2"
marker-pdf = {extras = ["full"], version = "^1.6.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
